--- a/templates/regProduct.html
+++ b/templates/regProduct.html
@@ -70,7 +70,7 @@
     <main>
         <div class="container">
             <h1>Registrar Producto</h1>
-            <form id="myform" action="{{ url_for('registrar_producto_post') }}" method="POST" enctype="multipart/form-data">
+            <form id="myform" 9action="{{ url_for('registrar_producto_post') }}" method="POST" enctype="multipart/form-data">
                 <div class="foto">
                     <label for="imagen">Imagen:</label>
                     <input type="file" id="imagen" name="imagen" required>
