--- a/static/style.css
+++ b/static/style.css
@@ -301,6 +301,8 @@ nav {
     max-width: 80%; /* Ajusta el tamaño de las imágenes */
     max-height: 80%; /* Ajusta la altura máxima de las imágenes */
     margin:-50%; /* Centra las imágenes horizontalmente */
+    position: relative;
+    top: 290px;
 }
 
 /* Estilos básicos para el carrusel */
@@ -710,3 +712,162 @@ footer .social-media a:active {
         gap: 10px; /* Espacio reducido entre los iconos sociales */
     }
 }
+
+/* Estilo base para el menú */
+.menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    z-index: 1000;
+}
+
+.menu li {
+    position: relative;
+    display: inline-block;
+    z-index: 1000;
+}
+
+.menu li:hover ul {
+    display: block;
+    z-index: 1000;
+}
+
+.menu ul {
+    display: none;
+    position: absolute;
+    top: 120%; /* Ajusta la posición vertical del submenú */
+    left: 0;
+    z-index: 1000;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.menu ul li {
+    margin-bottom: 0; /* Espacio vertical entre elementos del submenú */
+}
+
+.menu ul li a {
+    display: block;
+    background-color: #342E00FF;
+    color: #FFF07FFF;
+    text-decoration: none;
+    padding: 10px; /* Espaciado interno para los enlaces */
+}
+
+/* Estilo para pantallas grandes (computadoras y laptops) */
+@media (min-width: 1024px) {
+
+    .menu li {
+        display: inline-block;
+    }
+
+    .menu ul {
+        top: 160%; /* Ajusta la distancia vertical del submenú */
+    }
+}
+
+/* Estilo para pantallas medianas (tablets y laptops pequeñas) */
+@media (max-width: 1024px) and (min-width: 768px) {
+    .menu li {
+        display: inline-block; /* O puedes cambiar a block si quieres un menú vertical */
+    }
+
+    .menu ul {
+        top: 120%; /* Ajusta la distancia vertical del submenú */
+    }
+}
+
+/* Estilo para pantallas pequeñas (celulares) */
+@media (max-width: 768px) {
+    .menu {
+        text-align: center; /* Centra el menú */
+    }
+
+    .menu li {
+        display: block; /* Cambia a bloque para una visualización vertical en móviles */
+    }
+
+    .menu ul {
+        position: static; /* Elimina la posición absoluta para móviles */
+        top: auto; /* Restablece la posición vertical */
+        left: auto; /* Restablece la posición horizontal */
+        width: 100%; /* Ocupa el ancho completo */
+    }
+
+    .menu ul li {
+        margin-bottom: 0; /* Espacio vertical entre elementos del submenú */
+    }
+
+    .menu ul li a {
+        padding: 15px; /* Aumenta el padding para mejorar la usabilidad en pantallas táctiles */
+    }
+
+    .menu li:hover ul {
+        display: block; /* Asegúrate de que el submenú se muestre en móviles */
+    }
+}
+
+
+
+/* estilos a los flash */
+#flash-message-container {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1050; /* Asegura que el mensaje esté por encima de otros elementos */
+        width: auto;
+        max-width: 80%; /* Ajusta este valor según sea necesario */
+        text-align: center; /* Centra el texto dentro del contenedor */
+      }
+
+      #flash-message {
+        font-size: 0.875rem; /* Tamaño de fuente más pequeño */
+        padding: 0.5rem 1rem; /* Ajusta el relleno según sea necesario */
+        margin: 0.5rem 0; /* Ajusta el margen según sea necesario */
+      }
+      .alert-dismissible .btn-close {
+        display: none;
+      }
+
+
+
+
+
+
+
+
+/* Los dos contenedores principales responsivos */
+@media (max-width: 800px) {
+    .container {
+        flex-direction: column; /* Cambia a columna en pantallas más pequeñas */
+        align-items: center; /* Centra los elementos */
+    }
+    .principal-container, .pre-visualizacion {
+        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
+    }
+    .pre-visualizacion {
+        margin-top: 20px; /* Añade un margen superior para separar los elementos */
+    }
+}
+
+@media (max-width: 768px) {
+    .pre-visualizacion {
+        width: 100%; /* Ajusta el ancho al 100% en pantallas pequeñas */
+        max-width: 305px; /* Límite máximo de ancho para mantener el diseño */
+        margin: 0 auto; /* Centra horizontalmente en pantallas pequeñas */
+    }
+}
+
+/* Amarillo Pastel: #FFFFCC
+Amarillo Normal: #FFD700
+Mostaza: #D4AF37
+Amarillo Claro: #FFFF99
+Amarillo Dorado: #FFDF00
+Amarillo Mostaza: #FFDB58
+Amarillo Ocre: #CC7722
+Amarillo Ámbar: #FFBF00
+Amarillo Dorado Oscuro: #B8860B
+Amarillo Maíz: #FBEC5D */
+
