--- a/templates/consultarProductos.html
+++ b/templates/consultarProductos.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../static/assets/font/flaticon.css">
     <link rel="stylesheet" href="../static/consulta_general.css">
     <link rel="stylesheet" href="../static/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+</style>
     <style>
         .product-image {
             max-width: 100px;
@@ -40,16 +43,47 @@
                 <a href="index.html"><img src="../static/assets/img/Logotipo_GladiatorsTransparente.png" alt="imagen-logo"></a>
                 <h5>Gladiator's</h5>
             </section>
-            <section class="secciones">
-                <a href="./pages/index.html">Inicio</a>
-                <a href="./pages/index.html">Ventas</a>
-                <a href="./pages/index.html">Productos</a>
-                <a href="./pages/index.html">Usuarios</a>
-                <a href="./pages/index.html">Soporte</a>
-                <a href="./pages/index.html">Cerrar Sesión</a>
-            </section>
+            <ul class="menu secciones">
+                <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
+
+                <li><a href="{{ url_for('reporte_semanal') }}">Ventas</a>
+                <ul>
+                    <li><a href="registrar_venta">Registrar</a></li>
+                    <li><a href="reporte_diario">Reporte diario</a></li>
+                    <li><a href="reporte_semanal">Reporte semanal</a></li>
+                </ul>
+                </li>
+
+                <li><a href="./pages/index.html">Productos</a>
+                <ul>
+                    <li class="secciones"><a href="registrar_producto">Registrar</a></li>
+                    <li class="secciones"><a href="consultar_productos">Consultar</a></li>
+                </ul>
+                </li>
+
+                <li><a href="./pages/index.html">Usuarios</a>
+                <ul>
+                    <li class="secciones"><a href="registrar_usuario">Registrar</a></li>
+                    <li class="secciones"><a href="consultar_usuarios">Consultar</a></li>
+                </ul>
+
+                </li>
+                <li><a href="{{ url_for('index') }}">Soporte</a></li>
+                <li><a href="{{ url_for('index') }}">Cerrar Sesión</a></li>
+            </ul>
         </nav>
     </header>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+        {% for category, message in messages %}
+          <div id="flash-message" class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
+
     <main>
         <div class="container">
             <h1 class="p">Consultar Productos</h1>
@@ -101,9 +135,6 @@
                                             <form action="{{ url_for('update1_producto', id_producto=fila[0]) }}" method="GET" style="display:inline;">
                                                 <button type="submit" class="/">📝</button>
                                             </form>
-                                            <form action="{{ url_for('delete_producto', id_producto=fila[0]) }}" method="POST" style="display:inline;">
-                                                <button type="submit" class="boton-2">borrar</button>
-                                            </form>
                                             <a href="{{ url_for('consultar_producto', id_producto=fila[0]) }}" class="/">👁️‍🗨️</a>
                                         </td>
                                     </tr>
@@ -123,5 +154,20 @@
             </section>
         </div>
     </main>
+    <script>
+      // Ocultar el mensaje después de 3 segundos
+      setTimeout(function() {
+        var flashMessage = document.getElementById('flash-message');
+        if (flashMessage) {
+          flashMessage.classList.remove('show');
+          flashMessage.classList.add('fade');
+          setTimeout(function() {
+            flashMessage.remove();
+          }, 500); // Espera a que la animación de desvanecimiento termine
+        }
+      }, 3500); // Tiempo en milisegundos (3 segundos)
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
