--- a/templates/consultarUsuario.html
+++ b/templates/consultarUsuario.html
@@ -39,6 +39,33 @@
             <ul class="menu secciones">
                 <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
 
+                <li><a href="{{ url_for('reporte_semanal') }}">Ventas</a>
+                <ul>
+                    <li><a href="registrar_venta">Registrar</a></li>
+                    <li><a href="reporte_diario">Reporte diario</a></li>
+                    <li><a href="reporte_semanal">Reporte semanal</a></li>
+                </ul>
+                </li>
+
+                <li><a href="./pages/index.html">Productos</a>
+                <ul>
+                    <li class="secciones"><a href="registrar_producto">Registrar</a></li>
+                    <li class="secciones"><a href="consultar_productos">Consultar</a></li>
+                </ul>
+                </li>
+
+                <li><a href="./pages/index.html">Usuarios</a>
+                <ul>
+                    <li class="secciones"><a href="registrar_usuario">Registrar</a></li>
+                    <li class="secciones"><a href="consultar_usuarios">Consultar</a></li>
+                </ul>
+
+                </li>
+                <li><a href="{{ url_for('index') }}">Soporte</a></li>
+                <li><a href="{{ url_for('index') }}">Cerrar Sesión</a></li>
+            </ul><ul class="menu secciones">
+                <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
+
                 <li><a href="registrar_venta">Ventas</a></li>
 
                 <li><a href="{{ url_for('productos') }}">Productos</a>
