--- a/templates/regVenta.html
+++ b/templates/regVenta.html
@@ -89,7 +89,13 @@
             <ul class="menu secciones">
                 <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
 
-                <li><a href="{{ url_for('reporte_semanal') }}">Ventas</a></li>
+                <li><a href="{{ url_for('reporte_semanal') }}">Ventas</a>
+                <ul>
+                    <li><a href="registrar_venta">Registrar</a></li>
+                    <li><a href="reporte_diario">Reporte diario</a></li>
+                    <li><a href="reporte_semanal">Reporte semanal</a></li>
+                </ul>
+                </li>
 
                 <li><a href="./pages/index.html">Productos</a>
                 <ul>
@@ -105,9 +111,10 @@
                 </ul>
 
                 </li>
-                <li><a href="./pages/index.html">Soporte</a></li>
-                <li><a href="./pages/index.html">Cerrar Sesión</a></li>
+                <li><a href="{{ url_for('index') }}">Soporte</a></li>
+                <li><a href="{{ url_for('index') }}">Cerrar Sesión</a></li>
             </ul>
+            
         </nav>
     </header>
     <h1>Ventas</h1>
