--- a/templates/regUsuario.html
+++ b/templates/regUsuario.html
@@ -132,5 +132,15 @@
                     })">Registrar</button>
     </form>
     </main>
+<script>
+        document.getElementById('imagen').onchange = function (event) {
+            const [file] = event.target.files;
+            if (file) {
+                const preview = document.getElementById('preview');
+                preview.src = URL.createObjectURL(file);
+                preview.style.display = 'block';
+            }
+        };
+    </script>
 </body>
 </html>
