--- a/templates/editarUsuario.html
+++ b/templates/editarUsuario.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-<header>
     <section class="incons-container">
         <!-- Aqui van  los iconos de las redes sociales, eslogan, correo y horarios -->
         <div class="incons">
@@ -30,38 +29,60 @@
             Sab-Dom 9:00a.m--9:00p.m</p>
         </div>
     </section>
-    <nav>
-        <!-- Aqui va el logo y nombre de la tienda y el nombre de las secciones -->
-        <section class="logo-gladiators">
-            <a href="index.html"><img src="../static/assets/img/Logotipo_GladiatorsTransparente.png"alt="imagen-logo"></a>
-            <h5>Gladiator's</h5>
-        </section>
-        <section>
-            <ul class="menu secciones">
-                <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
-
-                <li><a href="registrar_venta">Ventas</a></li>
-
-                <li><a href="{{ url_for('productos') }}">Productos</a>
-                <ul>
-                    <li class="secciones"><a href="registrar_producto">Registrar</a></li>
-                    <li class="secciones"><a href="consultar_productos">Consultar</a></li>
-                </ul>
-                </li>
-                {% if rol == 1 %}
-                <li><a href="./pages/index.html">Usuarios</a>
-                <ul>
-                    <li class="secciones"><a href="registrar_usuario">Registrar</a></li>
-                    <li class="secciones"><a href="consultar_usuarios">Consultar</a></li>
-                </ul>
-
-                </li>
-                {% endif %}
-                <li><a href="{{ url_for('index') }}">Soporte</a></li>
-                <li><a href="{{ url_for('index') }}">Cerrar Sesión</a></li>
-            </ul>
-        </section>
-    </nav>
+        <nav>
+            <section class="logo-gladiators">
+                <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='assets/img/Logotipo_GladiatorsTransparente.png') }}" alt="Logotipo Gladiator's"></a>
+                <h5>Gladiator's</h5>
+            </section>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="ventasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Ventas
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="ventasDropdown">
+                        <a class="dropdown-item" href="registrar_venta">Registrar</a>
+                        <a class="dropdown-item" href="#">Consultar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="productosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Productos
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="productosDropdown">
+                        <a class="dropdown-item" href="productos">Registrar</a>
+                        <a class="dropdown-item" href="consultar_productos">Consultar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="usuariosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Usuarios
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="usuariosDropdown">
+                        <a class="dropdown-item" href="registrar_usuario">Registrar</a>
+                        <a class="dropdown-item" href="consultar_usuarios">Consultar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/index.html">Soporte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/index.html">Cerrar Sesión</a>
+                    </li>
+                    </ul>
+                </div>
+                </div>
+            </nav>
+        </nav>
+    </header>
 </header>
 <body>
     <div class="container-fluid">
