--- a/templates/secciones.html
+++ b/templates/secciones.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secciones - Gladiator's</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/font/flaticon.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='seccion.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/assets/font/flaticon.css">
+    <link rel="stylesheet" href="../static/seccion.css">
+    <link rel="stylesheet" href="../static/consulta_general.css">
+    <link rel="stylesheet" type="text/css" href="../static/consulta_general.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
     <header>
         <section class="incons-container">
             <div class="incons">
-                <a href="/"><span class="flaticon-001-facebook"></span></a>
-                <a href="/"><span class="flaticon-003-whatsapp"></span></a>
-                <a href="/"><span class="flaticon-011-instagram"></span></a>
+                <a href="/"><span class="flaticon-001-facebook" aria-label="Facebook"></span></a>
+                <a href="/"><span class="flaticon-003-whatsapp" aria-label="WhatsApp"></span></a>
+                <a href="/"><span class="flaticon-011-instagram" aria-label="Instagram"></span></a>
             </div>
             <div class="inf-p">
                 <p>Más que una tienda, un universo de posibilidades...</p>
@@ -32,49 +39,81 @@
                 <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='assets/img/Logotipo_GladiatorsTransparente.png') }}" alt="Logotipo Gladiator's"></a>
                 <h5>Gladiator's</h5>
             </section>
-            <ul class="menu secciones">
-                    <li><a href="{{ url_for('secciones') }}">Inicio</a></li>
-    
-                    <li><a href="registrar_venta">Ventas</a></li>
-    
-                    <li><a href="{{ url_for('productos') }}">Productos</a>
-                    <ul>
-                        <li class="secciones"><a href="registrar_producto">Registrar</a></li>
-                        <li class="secciones"><a href="consultar_productos">Consultar</a></li>
-                    </ul>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="secciones">Inicio</a>
                     </li>
-                    {% if rol == 1 %}
-                    <li><a href="./pages/index.html">Usuarios</a>
-                    <ul>
-                        <li class="secciones"><a href="registrar_usuario">Registrar</a></li>
-                        <li class="secciones"><a href="consultar_usuarios">Consultar</a></li>
-                    </ul>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="ventasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Ventas
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="ventasDropdown">
+                        <a class="dropdown-item" href="registrar_venta">Registrar</a>
+                        <a class="dropdown-item" href="reporte_diario">Reporte Diario</a>
+                        <a class="dropdown-item" href="reporte_semanal">Reporte Semanal</a>
+                        </div>
                     </li>
-                    {% endif %}
-                    <li><a href="{{ url_for('index') }}">Soporte</a></li>
-                    <li><a href="{{ url_for('index') }}">Cerrar Sesión</a></li>
-                </ul>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="productosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Productos
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="productosDropdown">
+                        <a class="dropdown-item" href="productos">Registrar</a>
+                        <a class="dropdown-item" href="consultar_productos">Consultar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="usuariosDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Usuarios
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="usuariosDropdown">
+                        <a class="dropdown-item" href="registrar_usuario">Registrar</a>
+                        <a class="dropdown-item" href="consultar_usuarios">Consultar</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Soporte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Cerrar Sesión</a>
+                    </li>
+                    </ul>
+                </div>
+                </div>
+            </nav>
         </nav>
     </header>
     <main>
         <h1>Bienvenido, {{ username }}</h1>
         <hr class="lin">
         <div class="button-container">
-            {% if rol ==1 %}
+            {% if rol == 1 %}
                 <div class="button-ventas">
                     <a href="{{ url_for('registrar_venta') }}" style="color: black;">Ventas</a>
                 </div>
                 <div class="button-usuario">
-                    <a href="{{ url_for('consultar_usuarios') }}" style="color: black;">Usuarios</a>
+                    <a href="{{ url_for('registrar_usuario') }}" style="color: black;">Usuarios</a>
                 </div>
             {% else %}
                 <div class="button-ventas">
                     <a href="{{ url_for('registrar_venta') }}" style="color: black;">Ventas</a>
                 </div>
             {% endif %}
-            <div class="button-producto">
-                <a href="{{ url_for('consultar_productos') }}" style="color: black;">Productos</a>
-            </div>
+            {% if rol == 1 %}
+                <div class="button-producto">
+                    <a href="{{ url_for('productos') }}" style="color: black;">Productos</a>
+                </div>
+            {% else %}
+                <div class="button-producto">
+                    <a href="{{ url_for('consultar_productos') }}" style="color: black;">Productos</a>
+                </div>
+            {% endif %}
         </div>
     </main>
 </body>
